--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,16 @@
-fruits list:
-apple
-Hello world
-orange
-pomelo
 
-Lorem ipsum generator: https://www.lipsum.com/
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="lab1pic.jpg" alt= "Lab 1">
+ <h1> Kennedy Whitehead </h1>   
+</body>
+</html>
+
+
+
